--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
+    "sass": "^1.57.1",
+    "sass-loader": "^10.4.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5"
   },
