started working in state mgmt using vuex

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "ionicons": "^6.0.3",
     "swiper": "^8.4.5",
     "vue": "^3.2.21",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@capacitor/cli": "4.6.1",
